second example with pet

--- a/public_html/fatfree/F3-SimpleExample/ui/response.html
+++ b/public_html/fatfree/F3-SimpleExample/ui/response.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 A very simple response View template:
 just echoes what the input data were.
 The parameter "formData" is an array that
@@ -7,5 +7,6 @@ has been set as a global F3 variable, using $f3->set().
 
 <h1>Thanks for your data, {{ @formData.name }} ...</h1>
 <p> Your colour was {{ @formData.colour }} </p>
+<p> Your pet was {{ @formData.pet }} </p>
 <hr />
 <a href="{{ @BASE }}/dataView">Show all data</a>
