--- a/public_html/fatfree/F3-SimpleExample/ui/simpleform.html
+++ b/public_html/fatfree/F3-SimpleExample/ui/simpleform.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 A very simple input form View template:
 note that the form method is POST, and the action
 is the URL for the route that handles form input.
@@ -6,15 +6,19 @@ is the URL for the route that handles form input.
 
 <p>This is a simple form</p>
 <form id="form1" name="form1" method="post" action="{{ @BASE }}/simpleform">
-  Please enter your name: 
+  Please enter your name:
   <input name="name" type="text" placeholder="Enter name" id="name" size="50" />
 
-<p>Choose a colour: 
+<p>Choose a colour:
   <select name="colour" id="colour">
     <option value="blue">Blue</option>
     <option value="red" selected="selected">Red</option>
     <option value="green">Green</option>
   </select>
+</p>
+<p>
+Please enter your favourite type of pet:
+<input name="pet" type="text" placeholder="Enter your favourite pet" id="pet" size="50" />
 </p>
 <p>
   <input type="submit" name="Submit" value="Submit" />
