--- a/public_html/fatfree/F3-SimpleExample/ui/dataView.html
+++ b/public_html/fatfree/F3-SimpleExample/ui/dataView.html
@@ -2,12 +2,13 @@
 
 <table>
 	<tr>
-		<th>Name</th><th>Colour</th>
+		<th>Name</th><th>Colour</th><th>Pet</th>
 	</tr>
 	<repeat group="{{ @dbData }}" value="{{ @record }}">
 		<tr>
 			<td>{{ trim(@record.name) }}</td>
 			<td>{{ trim(@record.colour) }}</td>
+			<td>{{ trim(@record.pet) }}</td>
 		</tr>
 	</repeat>
 </table>
